2009-01-28 Richard Dale <richard.j.dale@gmail.com>
* Added a Wt::dynamic_cast() method for use when the corresponding C++ code 
would have needed a dynamic cast. For instance, this C++ code:

    WItemSelectionModel *selection
      = dynamic_cast<WItemSelectionModel *>(event.source());

In Ruby is translated to:

    selection = Wt::dynamic_cast(event.source, Wt::WItemSelectionModel)

* Added a marshaller for std::map<int,boost::any> types
* Fixed the treeview-dragdrop to work with a single threaded version of the
wthttp lib by adding a constant MULTI_THREADED, value false, and not making
any calls that depend on multi-threading.
* Added a std::map<std::string,std::string> marshaller

2009-01-27 Richard Dale <richard.j.dale@gmail.com>
* Added the treeview-dragdrop example, but can't get drag and drop to work 
with it in either Ruby or C++
* Added the Wt::Signal<Wt::WModelIndex,Wt::WMouseEvent> signal type

2009-01-26 Richard Dale <richard.j.dale@gmail.com>
* Special case the WMenu#addItem method and keep the 'contents' arg values in 
a hash to prevent ruby from garbage collecting them. They aren't directly 
accessible from the Wt C++ api once they've been added to a Wt::MenuItem, and
that makes it impossible for the code in the smokeruby_mark() function to mark
them as not needing garbage collection when traversing the WMenu/WMenuItem 
heirarchy.
* In Wt, various enums are defined in terms of other enums, for instance 
Wt::WWidget::None is defined as Wt::None. Add the same equivalent names to the 
Wt::Ruby classes.
* Change the name of the WMenu hash to 'item_contents' and make the key the id
of the WMenuItem, as this is useful for debugging
* Remove the WDllDefs.h from the wt_header_list as it was messing up the code
generation of the Smoke library with Wt 2.2.3
* More fixes for the examples
* Added @item_contents instance variables to Wt::WMenuItem and 
Wt::WSubMenuItem so that they can be added to the item_contents hash table of